added modal in delete draft#145

--- a/OpenBioC/app/templates/app/deleteModal.html
+++ b/OpenBioC/app/templates/app/deleteModal.html
@@ -6,6 +6,7 @@
     </div>
     <div class="modal-footer">
         <a href="#!" class="modal-close waves-effect waves-red btn-flat">No</a>
-        <a href="#!" class="modal-close waves-effect waves-green btn-flat">Yes</a>
+        <a href="#!" class="modal-close waves-effect waves-green btn-flat"
+        ng-click="tool_finalize_delete_pressed('DELETE', true)">Yes</a>
     </div>
 </div>
