show draft state in jstrees #145

--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -185,7 +185,7 @@
 
                     <div class="row left-align">
                         <div class="col">
-                            <div js-tree="tools_search_jstree_config" should-apply="tools_search_jstree_config_apply()"
+                            <div id='tools_search_jstree_id' js-tree="tools_search_jstree_config" should-apply="tools_search_jstree_config_apply()"
                                 ng-model="tools_search_jstree_model" tree="tools_search_jstree"
                                 tree-events="select_node:tools_search_jstree_select_node"></div>
                         </div>
