--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -460,9 +460,11 @@
                         ng-show="workflows_info_draft && workflows_info_username==username && !workflows_info_editable"
                         ng-click="workflow_edit_pressed()">Edit</a>
                     <a class="btn tooltipped" data-position="bottom" data-tooltip="Finalize" style="margin-bottom:2px"
-                        ng-show="workflows_info_draft && workflows_info_username==username && !workflows_info_editable">Finalize</a>
+                        ng-show="workflows_info_draft && workflows_info_username==username && !workflows_info_editable"
+                        ng-click="ro_finalize_delete_pressed('workflow', 'FINALIZE', false)">Finalize</a>
                     <a class="btn tooltipped" data-position="bottom" data-tooltip="Delete" style="margin-bottom:2px"
-                        ng-show="workflows_info_draft && workflows_info_username==username && !workflows_info_editable">Delete</a>
+                        ng-show="workflows_info_draft && workflows_info_username==username && !workflows_info_editable"
+                        ng-click="ro_finalize_delete_pressed('workflow', 'DELETE', false)">Delete</a>
                     <a class="dropdown-trigger btn" data-target='runDropdownWorkflow' style="margin-bottom:2px">Run</a>
                     <a class="dropdown-trigger btn" data-target='downloadDropdownWorkflow' style="margin-bottom:2px">Download</a>
                     <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
