created tests.js #148

--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -338,6 +338,7 @@
 
 	<script type="text/javascript" src="/static/app/materialize/js/materialize.min.js"></script>
 	<script type="text/javascript" src="/static/app/konstantina/js/ui.js"></script>
+	{% if debug %}<script type="text/javascript" src="/static/app/tests.js"></script>{% endif %}
 	<script type="text/javascript" src="/static/app/OBC_app.js"></script>
 	<script type="text/javascript" src="/static/app/OBC_ctrl.js"></script>
 	<script type="text/javascript">
