dnd on tests #148

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -9,7 +9,7 @@
         <div class="card blue-grey lighten-4 rightPanelTitleCard">
             <div class="card-content rightPanelTitleContent">
                 <h5 class="rightPanelTitleHeader">Tool/Data</h5>
-                <a class="waves-effect btn-flat right" style="margin-top: -30px;" ng-click="tools_button_cancel_clicked()">Cancel</a>
+                <a id="tool_cancel_button_id" class="waves-effect btn-flat right" style="margin-top: -30px;" ng-click="tools_button_cancel_clicked()">Cancel</a>
             </div>
         </div>
         <div style="margin: 20px;">
