--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -130,7 +130,7 @@
 
         </div>
 
-        <ul class="collapsible expandable popout">
+        <ul id="searchResultsCollapsible" class="collapsible expandable popout">
             <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
             <!-- ------------------------------------------------ Tools / Data Left Panel ------------------------------------------------------------------------ -->
             <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
@@ -143,7 +143,8 @@
                         ng-show="tools_search_tools_number >= 0" style="margin-left: 5px;"></span>
                     <a id="toolsDataPlusBtn" class="waves-effect btn green plusBtn right tooltipped"
                         data-position="left" data-tooltip="Add a new Tool or Dataset" ng-show="!tools_info_editable"
-                        ng-click="tools_plus_button_clicked(true)"><i class="material-icons plusIcon">add</i></a>
+                        ng-click="tools_plus_button_clicked(true)">
+                        <i class="material-icons plusIcon">add</i></a>
                     <a id="toolsDataUnsavedBtn" class="waves-effect waves-light btn red lighten-2 right unsavedBtn"
                         ng-show="tools_info_editable" ng-click="tools_plus_button_clicked(false)">UNSAVED</a>
                 </div>
@@ -204,8 +205,10 @@
                     <span class="new badge" data-badge-caption="found" ng-bind="workflows_search_tools_number"
                         ng-show="workflows_search_tools_number >= 0" style="margin-left: 5px;"></span>
                     <a id="workflowsPlusBtn" class="waves-effect btn green plusBtn right tooltipped"
-                        data-position="left" data-tooltip="Create Workflow" ng-show="!workflows_info_editable"><i class="material-icons plusIcon"
-                            ng-click="workflows_plus_button_clicked(true)">add</i></a>
+                        data-position="left" data-tooltip="Create Workflow" 
+                        ng-show="!workflows_info_editable" 
+                        ng-click="workflows_plus_button_clicked(true)">
+                        <i class="material-icons plusIcon">add</i></a>
                     <a id="workflowsUnsavedBtn"
                         ng-show="workflows_info_editable"
                         ng-click="workflows_plus_button_clicked(false)"
