download airflow from dropdowns #141

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -73,6 +73,7 @@
                         <li><a ng-click="tool_info_run_pressed('JSON')">JSON</a></li>
                         <li><a ng-click="tool_info_run_pressed('CWLTARGZ')">CWL tar.gz</a></li>
                         <li><a ng-click="tool_info_run_pressed('CWLZIP')">CWL zip</a></li>
+                        <li><a ng-click="tool_info_run_pressed('AIRFLOW')">Airflow</a></li>
                     </ul>
 
                 </div>
@@ -492,6 +493,7 @@
                         <li><a ng-click="workflow_info_run_pressed('JSON')">JSON</a></li>
                         <li><a ng-click="workflow_info_run_pressed('CWLTARGZ')">CWL tar.gz</a></li>
                         <li><a ng-click="workflow_info_run_pressed('CWLZIP')">CWL zip</a></li>
+                        <li><a ng-click="workflow_info_run_pressed('AIRFLOW')">Airflow</a></li>
                     </ul>
                 </div>
                 <div class="left-align" style="margin-top: 5px; margin-bottom: 5px;">
