--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -38,7 +38,7 @@
 	-->
 
 
-	<!-- Google Icon Font. REMOVED FROM HERE IN ORDER NOT TO RELY ON EXTERNAL RESOURCES
+	<!-- Google Icon Font. REMOVED FROM HERE SO WOULDN'T RELY ON EXTERNAL RESOURCES
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	-->
 	<link rel="stylesheet" href="/static/app/material-design-icons-3.0.1/iconfont/material-icons.css">
