link documentation to readme.md

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -498,7 +498,7 @@
                     </ul>
                 </div>
                 <div class="left-align" style="margin-top: 5px; margin-bottom: 5px;">
-                    See <a ng-click="documenation_navbar_clicked()">Documentation</a> on how to execute a workflow
+                    See <a href="https://github.com/kantale/OpenBioC/tree/master/Documentation" target="_blank">Documentation</a> on how to execute a workflow
                 </div>
             </div>
 
