--- a/OpenBioC/app/templates/app/navbar2.html
+++ b/OpenBioC/app/templates/app/navbar2.html
@@ -31,7 +31,8 @@
             <!-- Navbar Content -->
             <ul id="main-nav" class="right hide-on-med-and-down">
                 <!-- <li><a class="black-text" href ng-click="navbar_home_clicked()">Home</a></li> -->
-                <li><a class="black-text" ng-click="documenation_navbar_clicked()">Documentation</a></li>
+                <!-- <li><a class="black-text" ng-click="documenation_navbar_clicked()">Documentation</a></li> -->
+                <li><a class="black-text" href="https://github.com/kantale/OpenBioC/tree/master/Documentation" target="_blank">Documentation</a></li>
                 <li ng-show="!username"><a href="#signModal" id="signInBtn" class="modal-trigger black-text" ng-click="navbar_signup_pressed()">Sign in</a></li> <!-- href="#signModal" -->
                 <li ng-show="username">
                     <a class="dropdown-trigger valign-wrapper black-text" href="#" data-target="profile">
