--- a/OpenBioC/app/templates/app/deleteModal.html
+++ b/OpenBioC/app/templates/app/deleteModal.html
@@ -7,6 +7,6 @@
     <div class="modal-footer">
         <a href="#!" class="modal-close waves-effect waves-red btn-flat">No</a>
         <a href="#!" class="modal-close waves-effect waves-green btn-flat"
-        ng-click="ro_finalize_delete_pressed(warning_modal_ro, warning_modal_action, true)">Yes</a>
+        ng-click="are_you_sure_modal_post_action(warning_modal_action)">Yes</a>
     </div>
 </div>
