--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -69,11 +69,11 @@
                     </ul>
                     <!-- Download Dropdown -->
                     <ul id='downloadDropdownTool' class='dropdown-content'>
-                        <li><a ng-click="tool_info_run_pressed('BASH')">BASH executable</a></li>
-                        <li><a ng-click="tool_info_run_pressed('JSON')">JSON</a></li>
-                        <li><a ng-click="tool_info_run_pressed('CWLTARGZ')">CWL tar.gz</a></li>
-                        <li><a ng-click="tool_info_run_pressed('CWLZIP')">CWL zip</a></li>
-                        <li><a ng-click="tool_info_run_pressed('AIRFLOW')">Airflow</a></li>
+                        <li><a ng-click="tool_info_download_pressed('BASH')">BASH executable</a></li>
+                        <li><a ng-click="tool_info_download_pressed('JSON')">JSON</a></li>
+                        <li><a ng-click="tool_info_download_pressed('CWLTARGZ')">CWL tar.gz</a></li>
+                        <li><a ng-click="tool_info_download_pressed('CWLZIP')">CWL zip</a></li>
+                        <li><a ng-click="tool_info_download_pressed('AIRFLOW')">Airflow</a></li>
                     </ul>
 
                 </div>
@@ -483,18 +483,18 @@
                     <!-- Run Dropdown -->
                     <ul id='runDropdownWorkflow' class='dropdown-content'>
                         <li ng-repeat="profile_client in profile_clients" ng-if="profile_client.name">
-                            <a>
+                            <a ng-click="workflow_info_run_pressed(profile_client.name)">
                                 <span ng-bind="profile_client.name"></span>
                             </a>
                         </li>
                     </ul>
                     <!-- Download Dropdown -->
                     <ul id='downloadDropdownWorkflow' class='dropdown-content'>
-                        <li><a ng-click="workflow_info_run_pressed('BASH')">BASH executable</a></li>
-                        <li><a ng-click="workflow_info_run_pressed('JSON')">JSON</a></li>
-                        <li><a ng-click="workflow_info_run_pressed('CWLTARGZ')">CWL tar.gz</a></li>
-                        <li><a ng-click="workflow_info_run_pressed('CWLZIP')">CWL zip</a></li>
-                        <li><a ng-click="workflow_info_run_pressed('AIRFLOW')">Airflow</a></li>
+                        <li><a ng-click="workflow_info_download_pressed('BASH')">BASH executable</a></li>
+                        <li><a ng-click="workflow_info_download_pressed('JSON')">JSON</a></li>
+                        <li><a ng-click="workflow_info_download_pressed('CWLTARGZ')">CWL tar.gz</a></li>
+                        <li><a ng-click="workflow_info_download_pressed('CWLZIP')">CWL zip</a></li>
+                        <li><a ng-click="workflow_info_download_pressed('AIRFLOW')">Airflow</a></li>
                     </ul>
                 </div>
                 <div class="left-align" style="margin-top: 5px; margin-bottom: 5px;">
