--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -848,7 +848,7 @@
                     <strong>Final Report: </strong><a ng-href="report_url" ><span ng-bind="report_url"></span></a>
                 </div>
                 <div ng-show="!report_url">
-                    <strong>Current status: </strong><span ng-bind="report_client_status"></span><button>Refresh</button>
+                    <strong>Current status: </strong><span ng-bind="report_client_status"></span><button ng-click="report_refresh()">Refresh</button>
                 </div>
             </div>
 
