--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -851,7 +851,7 @@
                     <div ng-show="report_log_url"><strong>Logs: </strong><a ng-href="{{report_log_url}}"><span ng-bind="report_log_url"></span></a></div>
                     {% endverbatim %}
                 </div>
-                <div ng-show="!report_url">
+                <div ng-show="report_client_status != 'SUCCESS' && report_client_status != 'FAILED'">
                     <strong>Current status: </strong><span ng-bind="report_client_status"></span><button ng-click="report_refresh()">Refresh</button>
                 </div>
             </div>
