--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -852,7 +852,8 @@
                     {% endverbatim %}
                 </div>
                 <div ng-show="report_client_status != 'SUCCESS' && report_client_status != 'FAILED'">
-                    <strong>Current status: </strong><span ng-bind="report_client_status"></span><button ng-click="report_refresh()">Refresh</button>
+                    <strong>Current status: </strong><span ng-bind="report_client_status"></span><button ng-click="report_refresh(1)">Refresh</button>
+                    <button ng-show="report_client_status=='RUNNING'" ng-click="report_refresh(2)">Pause</button>
                 </div>
             </div>
 
