--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -851,9 +851,14 @@
                     <div ng-show="report_log_url"><strong>Logs: </strong><a ng-href="{{report_log_url}}"><span ng-bind="report_log_url"></span></a></div>
                     {% endverbatim %}
                 </div>
-                <div ng-show="report_client_status != 'SUCCESS' && report_client_status != 'FAILED'">
+                <div ng-show="report_client_status == 'SUBMITTED' || report_client_status == 'PAUSE_SUBMITTED' || report_client_status == 'RESUME_SUBMITTED'">
                     <strong>Current status: </strong><span ng-bind="report_client_status"></span><button ng-click="report_refresh(1)">Refresh</button>
-                    <button ng-show="report_client_status=='RUNNING'" ng-click="report_refresh(2)">Pause</button>
+                </div>
+                <div ng-show="report_client_status == 'RUNNING">
+                    <strong>Current status: </strong><span ng-bind="report_client_status"></span><button ng-click="report_refresh(1)">Refresh</button><button ng-click="report_refresh(2)">Pause</button>
+                </div>
+                <div ng-show="report_client_status == 'PAUSED">
+                    <strong>Current status: </strong><span ng-bind="report_client_status"></span><button ng-click="report_refresh(3)">Resume</button>
                 </div>
             </div>
 
