--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -843,6 +843,9 @@
                     {% endverbatim %}
                 </small>
             </div>
+            <div class="row right-align">
+                <a class="btn tooltipped" data-position="bottom" data-tooltip="Delete" style="margin-bottom:2px" ng-show="username == report_username" ng-click="report_refresh(4, false)">Delete</a>
+            </div>
             <div class="left-align" style="margin-top: 5px; margin-bottom: 5px;" ng-show="report_client">
                 <div ng-show="report_client_status == 'SUCCESS' || report_client_status == 'FAILED'">
                     {% verbatim %}
@@ -851,14 +854,14 @@
                     <div ng-show="report_log_url"><strong>Logs: </strong><a ng-href="{{report_log_url}}"><span ng-bind="report_log_url"></span></a></div>
                     {% endverbatim %}
                 </div>
-                <div ng-show="report_client_status == 'SUBMITTED' || report_client_status == 'PAUSE_SUBMITTED' || report_client_status == 'RESUME_SUBMITTED'">
-                    <strong>Current status: </strong><span ng-bind="report_client_status"></span><button ng-click="report_refresh(1)">Refresh</button>
+                <div ng-show="report_client_status == 'SUBMITTED' || report_client_status == 'PAUSE_SUBMITTED' || report_client_status == 'RESUME_SUBMITTED' ">
+                    <strong>Current status: </strong><span ng-bind="report_client_status"></span><button ng-click="report_refresh(1, true)">Refresh</button>
                 </div>
                 <div ng-show="report_client_status == 'RUNNING'">
-                    <strong>Current status: </strong><span ng-bind="report_client_status"></span><button ng-click="report_refresh(1)">Refresh</button><button ng-click="report_refresh(2)">Pause</button>
+                    <strong>Current status: </strong><span ng-bind="report_client_status"></span><button ng-click="report_refresh(1, true)">Refresh</button><button ng-click="report_refresh(2, true)">Pause</button>
                 </div>
                 <div ng-show="report_client_status == 'PAUSED'">
-                    <strong>Current status: </strong><span ng-bind="report_client_status"></span><button ng-click="report_refresh(3)">Resume</button>
+                    <strong>Current status: </strong><span ng-bind="report_client_status"></span><button ng-click="report_refresh(3, true)">Resume</button>
                 </div>
             </div>
 
