--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -849,7 +849,7 @@
             <div class="left-align" style="margin-top: 5px; margin-bottom: 5px;" ng-show="report_client">
                 <div ng-show="true">
                     {% verbatim %}
-                    <div ng-show="visualization_url"><strong>Moninor Execution: </strong><a ng-href="{{visualization_url}}"><span ng-bind="visualization_url"></span></a></div><br>
+                    <div ng-show="report_visualization_url"><strong>Moninor Execution: </strong><a ng-href="{{report_visualization_url}}"><span ng-bind="report_visualization_url"></span></a></div><br>
                     {% endverbatim %}
                 </div>
                 <div ng-show="report_client_status == 'SUCCESS' || report_client_status == 'FAILED'">
