add monitor_url #176

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -850,6 +850,7 @@
                 <div ng-show="true">
                     {% verbatim %}
                     <div ng-show="report_visualization_url"><strong>Moninor Execution: </strong><a ng-href="{{report_visualization_url}}"><span ng-bind="report_visualization_url"></span></a></div><br>
+                    <div ng-show="report_monitor_url"><strong>Moninor Execution: </strong><a ng-href="{{report_monitor_url}}"><span ng-bind="report_monitor_url"></span></a></div><br>                    
                     {% endverbatim %}
                 </div>
                 <div ng-show="report_client_status == 'SUCCESS' || report_client_status == 'FAILED'">
